<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_selector_home"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/bookshelfFragment"
        android:icon="@drawable/ic_selector_collections_bookmark"
        android:title="@string/bookshelf"
        app:showAsAction="never" />
    <item
        android:id="@+id/visitHistoryFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="never" />
</menu>