<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_f_bookshelf_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_f_bookshelf_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_bookshelf"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_f_bookshelf_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_bookshelf"
        app:showAsAction="always"/>

<!--    <item-->
<!--        android:id="@+id/menu_f_bookshelf_more_shelves"-->
<!--        android:icon="@drawable/ic_shelves"-->
<!--        android:title="@string/more_shelves"-->
<!--        app:showAsAction="always" />-->

</menu>